[learn-list-c-func-b01] [file-i/o-handling] 01. Learning basic handing with file b01

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "*.html.tx": "html",
         "stdlib.h": "c",
         "stdio.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
